--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "6.4.1"
   },
   "devDependencies": {
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.8"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -19,8 +19,8 @@
     "namor": "^1.1.1",
     "object-assign": "^4.1.1",
     "prop-types": "^15.6.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "next",
+    "react-dom": "next",
     "react-form": "^3.4.4",
     "react-modal": "^3.6.1",
     "react-redux": "^5.0.7",
