--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "^2.1.8"
   },
   "dependencies": {
+    "antd": "^3.17.0",
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
